@@ -38,6 +38,7 @@ import org.elasticsearch.search.aggregations.support.ValuesSourceRegistry;
 import org.elasticsearch.search.internal.SearchContext;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -50,7 +51,7 @@ public class AbstractRangeAggregatorFactory<R extends Range> extends ValuesSourc
 
     public static void registerAggregators(ValuesSourceRegistry valuesSourceRegistry, String aggregationName) {
         valuesSourceRegistry.register(aggregationName,
-            List.of(CoreValuesSourceType.NUMERIC, CoreValuesSourceType.DATE, CoreValuesSourceType.BOOLEAN),
+            Arrays.asList(CoreValuesSourceType.NUMERIC, CoreValuesSourceType.DATE, CoreValuesSourceType.BOOLEAN),
             new RangeAggregatorSupplier() {
                 @Override
                 public Aggregator build(String name,
